# AgentNotification

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: claude-code.md  codex.md  kimi.md  wrapper.md
examples/: claude-settings.json  codex-config.toml
src/agentnotify/: __init__.py  _prompts.py  cli.py  config.py  hooks.py
src/agentnotify/installers/: __init__.py  _common.py  claude.py  codex.py  kimi.py
src/agentnotify/notifiers/: __init__.py  bark.py  base.py  ntfy.py
