[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentnotify"
version = "0.1.0"
description = "Mobile push notifications (Bark / ntfy) for Claude Code, Codex CLI, Kimi CLI, and any other agent CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentNotification contributors" }]
keywords = ["bark", "ntfy", "claude-code", "codex", "kimi", "agent", "notification", "push"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development",
]
dependencies = [
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/wmzspace/agentnotify"
Issues = "https://github.com/wmzspace/agentnotify/issues"

[project.scripts]
agentnotify = "agentnotify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentnotify"]
